# desktop-remote

./: Readme.md
src/: CMakeLists.txt  client.cpp  client.h  common.h  main.cpp  main_client.cpp  screen_x11.cpp  screen_x11.h  server_.cpp  server_.h  test_thread.cpp  test_union.cpp  test_x11.cpp
